styles.css
:root {
  --background: #E4DFDD;
  --player-one: #E28413;
  --player-two: #000052;
  --square-background: #FBF5F3;
  --button-background: #C42847;
  --button-font: #FBF5F3;
  --input-background: #FBF5F3;
  --game-text: #C42847;
}

* {
  font-family: monospace;
  background-color: var(--background);
  overflow:hidden;
}
.container {
  display: grid;
  height: 100vh;
  grid-template-columns: 1fr 2fr;
  grid-template-rows: .15fr 1fr;
  z-index: 0;
}  
.board {
    display: none;
    height: 500px;
    width: 500px;
    grid-area: 2 / 2 / 3 / 3;
    place-self: center;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
    grid-auto-flow: row;
    background-color: var(--square-background);
    gap: 2px;
    padding: 2px;

  }

  .square {
    border-color: var(--player-one-color);
    background-color: var(--square-background);
    font-size: 80px;
  }

  .sidebar {
    display: grid;
    grid-area: 1 / 1 / 3 / 3;
    grid-template: repeat(5, 1fr) / 1fr;

  }

.form {
    display: grid;
    grid-template: repeat(5, 1fr) / 1fr;
    grid-area: 1 / 1 / 6 / 2;
}

label {
 place-self: center;
 font-size: 40px;
 
}

input {
  align-self: start;
  justify-self: center;
  height: 30px;
  padding: 20px;
  width: 300px;
  border-radius: 8px;
  border-style: hidden;
  background-color: var(--square-background);
}

  #player-one-label {
    grid-area: 1 / 1 / 2 / 2;
    color: var(--player-one);
  }

  #player-one-input {
    grid-area: 2 / 1 / 3 / 2;
  }

  #player-two-label {
    grid-area: 3 / 1 / 4 / 2;
    color: var(--player-two);
  }

  #player-two-input {
    grid-area: 4 / 1 / 5 / 2;
  }
  

#play-button, #play-again-button {
  padding: 20px;
  border-radius: 20px;
  text-align: center;
  border-style: none;
  background-color: var(--button-background);
  color: var(--button-font);
}

#play-button {
  grid-area: 5 / 1 / 6 / 2;
  align-self: start;
  justify-self: center;
  width: 220px;
  font-size: 18px;
}

.result-display {
  color: var(--button-background);
  grid-area: 1 / 1 / 2 / 3;
  font-size: 50px;
  place-self: center;

}

#play-again-button {
  grid-area: 1 / 2 / 2 / 3;
  place-self: center;
  width: 270px;
  font-size: 24px;

}

